2010-10-27  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/agentes/configurar_agente.php,
	godmode/massive/massive_edit_agents.php: erased the calls "debugPrint" found
	in source code.

2010-10-27  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_db.php: in function "pandora_audit" added new parameter
	$info for to set more info in the audit. Cleaned source code style.
	
	* godmode/users/configure_user.php, godmode/users/configure_profile.php: now
	in the source code pick more info in the audit for actions to create,
	update and delete profiles and user, and for action to add and remove
	profiles to user.
	
2010-10-27  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_db.php: in function "pandora_audit" clean source code
	style, use the Pandora DB interface and now return id the row in tsesion.
	 
	* index.php: fixed when login failed the audit.
	
	* godmode/users/user_list.php: clean source code style.

2010-10-27  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/admin_access_logs.php: added hooks to enterprise code, and added
	new filter with more options.

	* include/functions_db.php: erase the deprecated function "audit_db", and
	added in function "pandora_audit" two new parameters $user_id, $ip for
	pass this values when it are differents to the default values. Finally
	replaced the depecrated "audit_db" for "pandora_audit".
	
	* include/functions_events.php, include/functions_filemanager.php, 
	include/ajax/reporting.ajax.php,
	include/ajax/visual_console_builder.ajax.php,
	include/ajax/alert_list.ajax.php, include/help/es/modu_group_list.php,
	include/functions_incidents.php, index.php, extensions/agents_modules.php,
	extensions/insert_data.php, extensions/system_info.php,
	extensions/dbmanager.php, extensions/update_manager/settings.php,
	extensions/pandora_logs.php, extensions/plugin_registration.php,
	operation/incidents/incident.php, operation/incidents/incident_detail.php,